--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module">
+      import React from "react";
+      import { createRoot } from "react-dom/client";
+      import App from "/App.tsx"; // <- App.tsx en la RAÍZ
+
+      const el = document.getElementById("root");
+      createRoot(el).render(
+        React.createElement(React.StrictMode, null, React.createElement(App))
+      );
+    </script>
   </body>
 </html>
