--- a/index.html
+++ b/index.html
@@ -7,16 +7,21 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>RAQA – Buscador de coincidencias</title>
-    <!-- (opcional) tu CSS si existe -->
-    <link rel="stylesheet" href="/index.css" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Lora:wght@600&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="stylesheet" href="/src/index.css" />
   </head>
   <body>
     <div id="root"></div>
 
-    <!-- ✅ AÑADIDO: XLSX desde CDN, disponible como window.XLSX -->
     <script src="https://cdn.jsdelivr.net/npm/xlsx/dist/xlsx.full.min.js"></script>
 
-    <!-- Tu app (Vite) -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
